--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+      <script src="https://cdn.tailwindcss.com"></script>
+
   
     <title>React App</title>
   </head>
